# simulation-api-tool

./: .dockerignore  .env.example  .env.librechat.example  .gitignore  .gitmodules  Dockerfile  LICENSE  LICENSES.md  README.md  docker-compose.librechat.yml  docker-compose.override.yml  docker-compose.yml  librechat.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
branding/: index.html
conf_file/: catheter.unv  sample_catheterization.fs2  sample_catheterization_with_error.fs2  toy_geometry.hdf  urethra.unv  ~sample_catheterization_with_error_auto.fs2
conf_file/jobs/: sample_catheterization.feb  sample_catheterization_with_error.feb
config/: catheter_catalogue.yaml  simulation.yaml
config/templates/: DT_BT_14Fr_FO_10E_IR12.yaml  DT_BT_14Fr_FO_10E_IR25.yaml  sample_catheterization.yaml
data/: jobs.db
digital_twin_ui/: __init__.py
docs/: csar-agent.md
mcp_server/: Dockerfile  requirements.txt  server.py  tools.py
notebooks/: Dockerfile  full_pipeline.ipynb  retraining.ipynb
scripts/: create-agent.sh  extract_pressure.py  febio4_wrapper.sh  setup-agent.py  setup-common-env.sh  setup-csar-agent.py  start-worker.sh
surrogate-lab/: pyproject.toml  requirements.txt
tests/: conftest.py  test_api_routes.py  test_base_configuration_integrity.py  test_catheter_catalogue.py  test_catheter_simulation_api.py  test_celery_tasks.py  test_config.py  test_correlated_sampler.py  test_docker_config.py  test_doe_sampler.py  test_extract_pressure_script.py  test_facet_pipeline.py  test_feb_reader.py  test_logging.py  test_mcp_server.py  test_mcp_template_tools.py  test_ml.py  test_mlflow_manager.py  test_multi_step_configurator.py  test_rag_api.py  test_rag_pipeline.py  test_simulation_configurator.py  test_simulation_monitor.py  test_simulation_runner.py  test_sql_ingestor.py  test_template_api_routes.py  test_template_registry.py  test_xplt_parser.py
xplt-parser/: pyproject.toml  xplt_explorer.ipynb
(+55 files in other folders)
