[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xplt-parser"
version = "0.1.0"
description = "FEBio .xplt binary parser and post-processing toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
notebook = ["ipykernel>=6.29.0", "jupyter>=1.0.0"]

[tool.setuptools]
# xplt_core.py lives at the root of the package directory (no subdirectory)
py-modules = ["xplt_core"]
